# pyOccam1DCSEM

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.txt  setup.cfg  setup.py
key1d/: config.status  configure.ac  dipole.py  occamfile.py
key1d/src/: CallDipole1D.f90  Makefile.am  Occam.f90
key1d/test/: plotoccam.py
occam1dcsem/: CMakeLists.txt  __init__.py  _dipole.pyx  dipole.py  occamfile.py  version.py
pyoccam1dcsem/: __init__.py  configure.ac  dipole.py  occamfile.py
pyoccam1dcsem/src/: CallDipole1D.f90  Makefile.am
pyoccam1dcsem/test/: RUNFILE  plotoccam.py
src/: CMakeLists.txt  CSEM1D.f90  CallDipole1D.f90  CallDipole1D.h  Makefile.am  RunOccam.f90
test/: plotoccam.py  runoccam.py
