#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(occam1dcsem,7.3,isloux@yahoo.co.uk )
AM_INIT_AUTOMAKE
AC_PROG_FC
AC_PROG_RANLIB

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
