#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(occam1dcsem,7.3,isloux@yahoo.co.uk )
AC_ENABLE_SHARED
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE
AC_PROG_FC
AC_PROG_CXX
AC_CONFIG_MACRO_DIRS([m4])
AM_CONDITIONAL([X86_64],[test $(uname -p)=="x86_64"])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
